[gd_scene load_steps=3 format=3 uid="uid://b82uyn3bip36e"]

[ext_resource type="Script" uid="uid://baopxpx14ykfd" path="res://cards/card_node.gd" id="1_ivai2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5k631"]
size = Vector2(25, 5)

[node name="CardScene" type="Area2D"]
script = ExtResource("1_ivai2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_5k631")

[node name="CardSpriteHolder" type="Node2D" parent="."]
position = Vector2(1, 0)

[node name="CardSprite" type="Sprite2D" parent="CardSpriteHolder"]
position = Vector2(-1, 0)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
